# rotmg-rl

./: .clang-format  .gitignore  CLAUDE.md  GOAL.md  PROGRESS.md  README.md  SERVER_AS_SIM.md  buildenv.sh  csim_sweep_best_reference.json  curve_summary.py  pyproject.toml  run-async-smoke.sh  run-async-tput.sh  run-learn.sh  run-lockstep-tput.sh  run-longrun.sh  run-verify-obs.sh  run_combat_proof.sh  server_eval.py  server_longrun.py  server_proof.py  server_shm_config.py  server_train.py  server_train_curriculum.py  server_trial.py  train.py  verify_dflow.py  verify_motion.py  verify_obs.py  verify_obs_async.py
_pufferlib/: README.md
_pufferlib/config/: boxoban.ini  cartpole.ini  chess.ini  double_pendulum.ini  drive.ini  drmario.ini  drone.ini  dungeon.ini  enduro.ini  hex.ini  laser_puzzle.ini  minimal.ini  overcooked.ini  pacman.ini  robocode.ini  rware.ini  server_env.ini
_pufferlib/pufferlib/: sweep.py
_pufferlib/src/: puffernet.h
_pufferlib/tests/: craftax_parity.py  craftax_state_fixtures.py  test_point_linear_max.py
deploy/: README.md  record.sh
deploy/flash/: flash_build.sh  flash_click.py  flash_play.sh  flash_type.py  login_type.py
deploy/nrelay/: README.md  accounts.example.json  packets.json  servers.cache.json  start-bot.js  versions.json
deploy/proxy/: action_to_input.py  obs_from_proxy.py  obs_proxy.py  obs_reader.py  redirect.c
deploy/snakepit-harness/: HANDOFF.md  attempt.sh  client.py  config.py  dungeon.py  input.py  miniwm  miniwm.c  obs.py  obs_reader.py  policy.py  proc.py  provision_wizard.py  proxy.py  record.py  run.py
docs/: CAPTURE.md  design.md  obs-schema.md  pufferlib4-migration.md  real-game-analysis.md  snakepit-spec.md  suarez-ultra-opinionated-rl-guide.md
docs/specs/: 2026-06-25-rotmg-rl-design.md
proof/: server_proof_curve.csv  server_proof_summary.txt
puffer4/: README.md  binding.c  dungeon.ini  dungeon_encoder.cu  dungeon_encoder.py  test_encoder.cu
pufferlib/: .gitignore  build.sh  pyproject.toml
pufferlib/config/: connect4.ini  craftax.ini  craftax_classic.ini  default.ini  dino.ini  docking.ini  freeway.ini  g2048.ini  go.ini  lightsout.ini  maze.ini  nethack.ini  pong.ini  slimevolley.ini  terraform.ini  tetris.ini  tower_climb.ini  trash_pickup.ini  tripletriad.ini  whackamole.ini
pufferlib/constellation/: cache_data.py  constellation.c
pufferlib/pufferlib/: models.py  pufferl.py  selfplay.py  sweep.py  torch_pufferl.py
pufferlib/src/: bf16.h  bindings.cu  kernels.cu  pufferlib.cu  tensor.h  vecenv.h
pufferlib/tests/: profile_kernels.cu  (+5 more)
scripts/: bench_csim.py  bench_env.py  box.sh  box4.sh  check_encoder_parity.py  curriculum.py  curriculum_dungeon.py  deploy_loop.py  eval_dungeon.py  eval_dungeon4.py  eval_follow.py  eval_policy.py  follow_along.py  follow_along4.py  pov_rollout.py  record_dungeon.py  record_episode.py  record_policy.py  reproduce.sh  setup.sh  setup_box.sh  setup_box_puffer4.sh  smoke_wandb.py  sweep_dungeon.py  sweep_dungeon4.py  train.py  train_curriculum.py  train_dungeon.py  train_dungeon4.py  wandb_metrics.py
sim-server/: README.md  fetch.sh  pin.txt  run-server-sim.sh  wServer.sim.json
tests/: test_config_sync.py  test_csim_parity.py  test_csim_wrapper.py  test_curriculum_depth.py  test_deploy.py  test_deploy_loop.py  test_dungeon.py  test_dungeon_scenarios.py  test_gap.py  test_policy_server.py  test_realmshark.py  test_snakepit.py  test_snakepit_map.py
(+105 files in other folders)
