[project]
name = "rotmg-rl"
version = "0.1.0"
description = "Cold-start RL agent that clears a ROTMG dungeon (Snake Pit) via a custom PufferLib sim."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "wandb>=0.17",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
]

# Training deps (pufferlib + torch) are heavy and CUDA-specific; installed on the GPU box.
# Kept in an optional group so the base scaffold resolves anywhere (incl. the aarch64 dev box).
[project.optional-dependencies]
train = [
    "torch>=2.4",
    "pufferlib>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rotmg_rl"]
