[project]
name = "rotmg-rl"
version = "0.1.0"
description = "Cold-start RL agent that clears a ROTMG dungeon (Snake Pit) via a custom PufferLib sim."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "gymnasium>=0.29",
    "wandb>=0.17",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
]

[dependency-groups]
dev = ["pytest>=8.0"]

# Training deps (pufferlib + torch) are heavy and CUDA-specific; installed on the GPU box.
# Kept in an optional group so the base scaffold resolves anywhere (incl. the aarch64 dev box).
[project.optional-dependencies]
# PufferLib 3.x's PuffeRL kernel must be compiled against the installed torch, so the GPU-box
# env is built via scripts/setup_box.sh (not a plain `uv sync`). Versions pinned to the working
# combo. See scripts/setup_box.sh for the required install order.
train = [
    "torch==2.8.0",
    "pufferlib==3.0",  # 3.x ships the PuffeRL trainer; build with --no-build-isolation (see setup_box.sh)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rotmg_rl"]
