[project]
name = "rotmg-rl"
version = "0.1.0"
description = "Cold-start RL agent that clears a ROTMG dungeon (Snake Pit) via a custom C simulator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "gymnasium>=0.29",
    "wandb>=0.17",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
]

[dependency-groups]
dev = ["pytest>=8.0"]

# Training deps are heavy and CUDA-specific; installed on the GPU box, not via a plain `uv sync`,
# so the base scaffold resolves anywhere (incl. the aarch64 dev box).
[project.optional-dependencies]
# PufferLib 4.0 is NOT a pip dependency: it is the vendored editable install at pufferlib/, built
# from source by scripts/setup.sh (`build.sh dungeon` then `pip install -e pufferlib/`). torch is the
# only pip-installable training dep; scripts/setup.sh installs the matching CUDA wheel. This group
# exists only so `pip install -e .[train]` pulls torch on the box.
train = ["torch>=2.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rotmg_rl"]

[tool.ruff]
line-length = 144
exclude = ["pufferlib", "vendor", ".venv", "build", "dist"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B),
# comprehensions (C4), and flake8-simplify (SIM): a practical correctness-plus-modernization set.
select = ["F", "E", "W", "I", "UP", "B", "C4", "SIM"]
